# CPE487587_SP26_Final_Project

./: .gitignore  Cargo.toml  README.md  autoencoder.py  evaluate.py  gan.py  pyproject.toml
logs/: run1_ae.out  run1_eval.out  run1_gan.out  run2_ae.out  run2_eval.out  run2_gan.out  run3_ae.out  run3_eval.out  run3_gan.out
results/: summary.txt
results/run1/: metrics.txt
results/run2/: metrics.txt
results/run3/: metrics.txt
src/: lib.rs
src/cpe487587_sp26_final_project/: __init__.py
weights/run1/: discriminator.pt  generator.pt
weights/run2/: discriminator.pt  generator.pt
weights/run3/: discriminator.pt  generator.pt
