[project]
name = "cpe487587-sp26-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Purplegh", email = "purplepurplegh@gmail.com" }
]
requires-python = ">=3.12"




dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "pillow",
    "scikit-image",
    "matplotlib",
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }





[tool.maturin]
module-name = "cpe487587_sp26_final_project._core"
python-packages = ["cpe487587_sp26_final_project"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
